# nyora-aidoku

./: .gitignore  Cargo.toml  README.md  data-liveness.json
.cargo/: config.toml
.github/workflows/: rebuild-sources.yml
data/: README.md  asurascans.json  madara.json  mangareader.json
public/: index.json  index.min.json
public/sources/: ar.arabsdoujin-v1.aix  ar.arabshentai-v1.aix  ar.arabtoons-v1.aix  ar.arareascans-v1.aix  ar.areascans-v1.aix  ar.asqorg-v1.aix  ar.comicarab-v1.aix  ar.flares-v1.aix  ar.gatemanga-v1.aix  ar.gmanga-v1.aix  ar.hijala-v1.aix  ar.hijalacom-v1.aix  ar.lekmangacom-v1.aix  ar.lekmangaorg-v1.aix  ar.likemanganet-v1.aix  ar.lonertl-v1.aix  ar.mangaailand-v1.aix  ar.mangaatrend-v1.aix  ar.mangaflame-v1.aix  ar.mangahublink-v1.aix  ar.mangalek-v1.aix  ar.mangaleko-v1.aix  ar.mangalinknet-v1.aix  ar.mangalionz-v1.aix  ar.manganoon-v1.aix  ar.mangapeak-v1.aix  ar.mangarbic-v1.aix  ar.mangarose-v1.aix  ar.mangasoul-v1.aix  ar.mangaspark-v1.aix  ar.mangastarz-v1.aix  ar.mangatime-v1.aix  ar.manhatic-v1.aix  ar.manhatok-v1.aix  ar.manjanoon-v1.aix  ar.nijitranslations-v1.aix  ar.noonscan-v1.aix  ar.normoyun-v1.aix  ar.novelstown-v1.aix  ar.olaoe-v1.aix  (+874 more)
templates/asurascans/: Cargo.toml
templates/common/: Cargo.toml
templates/hotcomics/: Cargo.toml
templates/madara/: Cargo.toml
templates/mangafire/: Cargo.toml
templates/mangareader/: Cargo.toml
templates/mmrcms/: Cargo.toml
templates/onemanga/: Cargo.toml
tools/: build-list.py  generate.py  icons.py  liveness.py  package-all.sh  refresh-domains.py  sync-upstream.py
(+18 files in other folders)
